syntax = "proto3";

package kvs.proto.messages;

// Data model for a request to the key-value store
message KvsRequest {
	// Different commands on the key-value store that can be requested
	enum KvsRequestKind {
		// Set request variant
		SET = 0;
		// Get request variant
		GET = 1;
		// Remove request variant
		REMOVE = 2;
	}

	// The type of this request
	KvsRequestKind kind = 1;
	// The key that is passed as argument
	string key = 2;
	// The value that is passed as argument
	string value = 3;
}

// Data model for a reponse from the key-value store
message KvsResponse {
	// Possible reponse's contents
	oneof response_result {
		// An error's message propagated from the server
		string error_message = 1;
		// Value of a key requested by a get request
		string get_command_value = 2;
	}
}
